c/examples/writing-a-c-compiler-tests/tests/chapter_1/valid/multi_digit.c
int main(void) {
    // test case w/ multi-digit constant
    return 100;
}