c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_parse/space_in_keyword.c
int main(void){
    retur n 0;
}